# wire-mother-app

./: .env.old  _SYSTEM PROMPT.md  _SYSTEM PROMPT.txt  index.html  package-lock.json  package.json  server.js  vercel.json
mother/: INSTALL.md  README.md  _SYSTEM PROMPT.md  config.py  main.py  pyproject.toml
mother/pipeline/: 19-openai-realtime-beta.py  console_status.py  wire_mother_pipeline.py
mother/services/: __init__.py  llm.py  stt.py  tts.py
projector/: controller.py  slide_projector_controller.pyi
public/: index.html
src/app/: layout.tsx  page.tsx
src/app/api/gpt/: route.ts
src/app/api/tts/: route.ts
